<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    tools:context=".MainActivity">



  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/quiz_app"
      android:textColor="@color/white"
      android:textSize="25sp"
      android:textStyle="bold"
      android:layout_marginBottom="16dp"/>

  <com.google.android.material.card.MaterialCardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:cardCornerRadius="20dp"
      android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/welcome"
          android:textColor="#363A43"
          android:textSize="30sp"
          android:textStyle="bold" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/please_enter_your_name"
          android:textColor="#7A8089"
          android:layout_marginTop="16dp"
          android:textSize="16sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
          android:layout_marginTop="20dp"
          >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:textColor="#363A43"
            android:textColorHint="#7A8089">
        </androidx.appcompat.widget.AppCompatEditText>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btn_start"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:backgroundTint="#9C27B0"
          android:text="@string/start"
          android:textColor="@color/white"/>
    </LinearLayout>

  </com.google.android.material.card.MaterialCardView>

</LinearLayout>